--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title><%= title %></title>
-</head>
-<body>
-  <%= data %>
-  <script src="build/docker-remote.min.js"></script>
-  <!-- endbuild  -->
-</body>
-</html>
+<%= JSON.stringify(data) %>
