--- a/app/views/page.ejs
+++ b/app/views/page.ejs
@@ -23,6 +23,9 @@
             <%- include containerinfo %>  
           <% } else if(page == "imageinfo"){ %>
             <%- include imageinfo %>
+          <% } else if(page == "500"){ %>
+
+          <% } %>
           <% } else { %>
             <%- include 404 %>
           <% } %>
