--- a/app/views/page.ejs
+++ b/app/views/page.ejs
@@ -24,8 +24,9 @@
           <% } else if(page == "imageinfo"){ %>
             <%- include imageinfo %>
           <% } else if(page == "500"){ %>
-
-          <% } %>
+            <%- include 500 %>
+          <% } else if(page == "404"){ %>
+            <%- include 404 %>
           <% } else { %>
             <%- include 404 %>
           <% } %>
