--- a/app/views/images.ejs
+++ b/app/views/images.ejs
@@ -1,1 +1,27 @@
-
+<table ng-controller="ImagesList" class="table table-hover table-condensed">
+  <thead>
+    <tr>
+      <th>Image Id</th>
+      <th>Tags</th>
+      <th>Created</th>
+      <th>Size</th>
+      <th>Virtual Size</th>
+      <th>Parent</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="img in images">
+      <td>{{img.Id.substring(0,TDSIZE)}}</td>
+      <td>
+        <div ng-repeat="tag in img.RepoTags">{{tag}}</div>
+      </td>
+      <td>{{img.Created | date:'medium'}}</td>
+      <td>{{img.Size}}</td>
+      <td>{{img.VirtualSize}}</td>
+      <td>{{img.ParentId.substring(0,TDSIZE)}}</td>
+    </tr>
+  </tbody>
+</table>
+<script>
+var DATA=<%- JSON.stringify(data) %>;
+</script>
