--- a/app/views/containers.ejs
+++ b/app/views/containers.ejs
@@ -9,10 +9,10 @@
   </thead>
   <tbody>
     <tr ng-repeat="cont in containers">
-      <td>{{cont.Id.substring(0,14)}}</td>
-      <td>{{cont.Image}}</td>
+      <td><a href="/container/{{cont.Id}}">{{cont.Id.substring(0,14)}}</a></td>
+      <td><a href="/image/{{cont.Image}}">{{cont.Image}}</td>
       <td>{{cont.Command}}</td>
-      <td>{{cont.Created | date:'medium'}}</td>
+      <td>{{cont.Created * 1000| date:'medium'}}</td>
     </tr>
   </tbody>
 </table>
