--- a/app/views/head.ejs
+++ b/app/views/head.ejs
@@ -1,4 +1,4 @@
 <title><%= title %></title>
-<link href="css/docker-remote.min.css" rel="stylesheet" type="text/css" />
+<link href="/css/docker-remote.min.css" rel="stylesheet" type="text/css" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
