--- a/app/views/page.ejs
+++ b/app/views/page.ejs
@@ -36,6 +36,6 @@
     <footer>
     <%- include footer.ejs %>
     </footer>
-    <script src="js/docker-remote.min.js"></script>
+    <script src="/js/docker-remote.min.js"></script>
   </body>
 </html>
