--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.sidebar .active{
+  background-color: #e7e7e7;
+  color: #555;
+}
+
 .dr-container {
   margin-top: 40px;
 }
@@ -11,5 +16,18 @@
 }
 
 .ImagesList {
+}
+
+@-webkit-keyframes rotating {
+    from{
+        -webkit-transform: rotate(0deg);
+    }
+    to{
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+.rotating {
+  -webkit-animation: rotating 2s linear infinite;
 }
 
