--- a/app/views/images.ejs
+++ b/app/views/images.ejs
@@ -1,5 +1,5 @@
 <div ng-controller="ImagesList" class="ImagesList">
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default" id="dr-static-navbar" scroll ng-class="{'navbar-fixed-top':boolNavbarScroll}">
     <div class="navbar-header">
       <a class="navbar-brand">Search</a>
     </div>
@@ -22,8 +22,12 @@
       <div class="col-xs-4 col-sm-2 options">
         <form>
           <input type="hidden" name="imageid" value="{{img.Id}}"/>
-          <button class="btn btn-default" title="Start a new container with this image"><span class="glyphicon glyphicon-flash"></span></button>
-          <button class="btn btn-danger" ng-click="deleteImage(img)" title="Remove image"><span class="glyphicon glyphicon-remove"></span></button>
+          <button class="btn btn-default" title="Start a new container with this image">
+            <span class="glyphicon" ng-class="{'glyphicon-repeat rotating':img.initloading,'glyphicon-flash':!img.initloading}"></span>
+          </button>
+          <button class="btn btn-danger" ng-click="deleteImage(img)" title="Remove image">
+            <span class="glyphicon" ng-class="{'glyphicon-repeat rotating':img.rmloading,'glyphicon-remove':!img.rmloading}"></span>
+          </button>
         </form>
       </div>
     </div>
