--- a/app/views/sidebar.ejs
+++ b/app/views/sidebar.ejs
@@ -1,9 +1,9 @@
-<nav class="navbar" role="sidebar">
+<nav class="navbar sidebar" role="sidebar">
   <ul class="nav">
     <li><img src="/img/homepage-docker-logo.png" alt="Docker" width="110" /></li>
     <li><!-- Dummy -->&nbsp;</li>
-    <li><a href="/">Dashboard</a></li>
-    <li><a href="/images">Images</a></li>
-    <li><a href="/containers">Containers</a></li>
+    <li <% if(page=="dashboard"){ %>class="active"<% } %>><a href="/">Dashboard</a></li>
+    <li <% if(page=="images"){ %>class="active"<% } %>><a href="/images">Images</a></li>
+    <li <% if(page=="containers"){ %>class="active"<% } %>><a href="/containers">Containers</a></li>
   </ul>
 </nav>
