--- a/app/views/sidebar.ejs
+++ b/app/views/sidebar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar sidebar" role="sidebar">
+<nav class="navbar navbar-stacked sidebar" id="sidebar" role="sidebar">
   <ul class="nav">
     <li><img src="/img/homepage-docker-logo.png" alt="Docker" width="110" /></li>
     <li><!-- Dummy -->&nbsp;</li>
