--- a/app/views/page.ejs
+++ b/app/views/page.ejs
@@ -6,7 +6,7 @@
   <body>
     <div class="container dr-container">
       <div class="row">
-        <div class="col-xs-4 col-md-2" id="sidebar">
+        <div class="col-xs-4 col-md-2 dr-center" id="sidebarcontainer">
           <%- include sidebar.ejs %>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-10">
