--- a/app/views/page.ejs
+++ b/app/views/page.ejs
@@ -6,10 +6,10 @@
   <body>
     <div class="container dr-container">
       <div class="row">
-        <div class="col-xs-4 col-md-2 dr-center" id="sidebarcontainer">
+        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 dr-center" id="sidebarcontainer">
           <%- include sidebar.ejs %>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-10">
+        <div class="col-xs-12 col-sm-7 col-md-10 col-lg-10 col-lg-offset-2 col-md-offset-2 col-sm-offset-4">
           <header>
           <%- include header.ejs %>
           </header>
